--- a/app/src/main/res/layout/playlist_child_expand.xml
+++ b/app/src/main/res/layout/playlist_child_expand.xml
@@ -20,7 +20,8 @@
         <TextView
             android:id="@+id/child_test_id"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
             android:layout_width="wrap_content"
             style="@style/ExpandChildBaseStyle"
             />
@@ -28,7 +29,6 @@
         <TextView
             android:id="@+id/track_child_title"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
             android:layout_weight="1"
             android:layout_width="0dp"
             style="@style/ExpandChildBaseStyle"
@@ -38,7 +38,6 @@
             android:id="@+id/track_child_duration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
             style="@style/ExpandChildBaseStyle"
             />
 
