change play button behaviour, some refact

--- a/app/src/main/res/layout/control_fragment_new.xml
+++ b/app/src/main/res/layout/control_fragment_new.xml
@@ -83,6 +83,7 @@
                 app:backgroundTint="@color/colorAccent"
                 app:mode="playToPause"
                 android:layout_margin="12dp"
+                android:clickable="false"
                 />
             <!-- Next Button -->
             <ImageButton
