change expand parent drawables

--- a/app/src/main/res/layout/song_decor_fragment.xml
+++ b/app/src/main/res/layout/song_decor_fragment.xml
@@ -42,8 +42,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:elevation="50dp"
-
+            android:elevation="20dp"
+            android:outlineProvider="bounds"
             />
 
         <TextView
