--- a/app/src/main/res/layout/control_fragment_new.xml
+++ b/app/src/main/res/layout/control_fragment_new.xml
@@ -65,6 +65,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_shuffle_black_24dp"
                 android:layout_marginLeft="5dp"
+                android:layout_marginEnd="24dp"
                 android:background="@null"/>
             <!-- Previous Button -->
             <ImageButton
@@ -73,7 +74,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:layout_margin="12dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="12dp"
+                android:layout_marginStart="12dp"
                 />
             <!-- Play Button -->
             <be.rijckaert.tim.animatedvector.FloatingMusicActionButton
@@ -92,7 +95,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:layout_margin="12dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="12dp"
+                android:layout_marginEnd="12dp"
                 />
 
             <!-- Repeat Button -->
@@ -102,6 +107,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_repeat_black_24dp"
                 android:layout_marginRight="5dp"
+                android:layout_marginStart="24dp"
                 android:background="@null"/>
 
 
