--- a/app/src/main/res/layout/playlist_fragment.xml
+++ b/app/src/main/res/layout/playlist_fragment.xml
@@ -74,7 +74,9 @@
             android:layout_marginTop="12dp"
             android:layout_weight="1"
             android:divider="#0f0"
-            android:dividerHeight="0dp" />
+            android:dividerHeight="0dp"
+            android:groupIndicator="@drawable/group_indicator_selector"
+            />
 
     </LinearLayout>
 </layout>
