--- a/app/src/main/res/layout/playlist_parent_item_view.xml
+++ b/app/src/main/res/layout/playlist_parent_item_view.xml
@@ -2,14 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="12dp"
+    android:background="@color/design_default_color_background"
+    >
 
     <TextView
         android:id="@+id/parent_albums_title_view"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="parent"
         style="@style/ExpandParentStyle"
+        android:layout_marginStart="36dp"
         />
 
     <TextView
@@ -17,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1985"
+        android:layout_marginEnd="12dp"
         style="@style/ExpandParentStyle"
         />
 
