change play-pause button style

--- a/app/src/main/res/layout/control_fragment_new.xml
+++ b/app/src/main/res/layout/control_fragment_new.xml
@@ -79,14 +79,14 @@
                 android:layout_marginStart="12dp"
                 />
             <!-- Play Button -->
-            <be.rijckaert.tim.animatedvector.FloatingMusicActionButton
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/play_pause_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:backgroundTint="@color/colorAccent"
-                app:mode="playToPause"
                 android:layout_margin="12dp"
                 android:clickable="false"
+                android:src="@drawable/ic_play_arrow_black_24dp"
                 />
             <!-- Next Button -->
             <ImageButton
