--- a/app/src/main/res/layout/song_decor_fragment.xml
+++ b/app/src/main/res/layout/song_decor_fragment.xml
@@ -35,13 +35,15 @@
             android:layout_height="0dp"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:scaleType="centerCrop"
             app:layout_constraintDimensionRatio="H,1:1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/round_outlines"
+
             android:elevation="20dp"
             android:outlineProvider="bounds"
             />
@@ -113,16 +115,6 @@
             app:layout_constraintTop_toBottomOf="@+id/albumTitle"
             />
 
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_subtitles_black_24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/albumImage"
-            android:onClick="@{() -> mainViewModel.getTrackText()}"
-            android:visibility="gone"
-            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
