--- a/app/src/main/res/layout/playlist_child_expand.xml
+++ b/app/src/main/res/layout/playlist_child_expand.xml
@@ -45,8 +45,9 @@
             android:id="@+id/track_child_options"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_more_vert_black_24dp"
+            android:src="@drawable/ic_close_black_24dp"
             android:layout_margin="12dp"
+            android:layout_gravity="center"
             />
 
     </LinearLayout>
