--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="backgroundColor">@color/inactiveIconsColor</item>
+        <item name="android:statusBarColor">@color/contrBackColor</item>
 <!--        <item name="activeIconsColor">@</item>-->
     </style>
 
