playlist loading animat

--- a/app/src/main/res/layout/playlist_fragment.xml
+++ b/app/src/main/res/layout/playlist_fragment.xml
@@ -78,5 +78,11 @@
             android:groupIndicator="@drawable/group_indicator_selector"
             />
 
+        <ImageView
+            imageStatus="@{playlistViewModel}"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center" />
+
     </LinearLayout>
 </layout>
