--- a/app/src/main/res/layout/playlist_fragment.xml
+++ b/app/src/main/res/layout/playlist_fragment.xml
@@ -13,7 +13,6 @@
 
     </data>
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -78,11 +77,11 @@
             android:groupIndicator="@drawable/group_indicator_selector"
             />
 
-        <ImageView
-            imageStatus="@{playlistViewModel}"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center" />
+<!--        <ImageView-->
+<!--            imageStatus="@{playlistViewModel}"-->
+<!--            android:layout_width="200dp"-->
+<!--            android:layout_height="200dp"-->
+<!--            android:layout_gravity="center" />-->
 
     </LinearLayout>
 </layout>
